# thesis-studio-backend

./: .env.e2-demo.example  .env.example  .env.owner-live.example  .env.production.example  .env.staging.example  .gitignore  CLA.md  CLAUDE.md  Dockerfile.phase5  M3-BLUEPRINT.md  NOTICE  PHASE5-COMMERCIAL-OPERATING-CONTRACT.md  README.md  SETUP-CLOUDFLARE-TUNNEL.md  SETUP-DEPLOYMENT.md  SETUP-GUIDE.md  acadensia-studio-v2.html  alembic.ini  docker-compose.yml  ecosystem.config.js  pyproject.toml  requirements.txt
app/: main.py
deploy/: cloudflared-staging.example.yml  compose.e2-demo.yml  compose.owner-live.yml  compose.phase5.yml  nginx-staging.conf  r2-lifecycle-staging.json
docs/: COMPETITIVE_ANALYSIS.md  DOMAIN_EXPANSION.md  FRICTION_LOG.md  FRONTEND_LLD.md  LLD.md  LLD_MISSING_FEATURES.md  OPEN_STACK.md  PHASE1_TRUSTED_CONVERSION.md  PHASE2_HUMAN_REVIEW.md  PHASE3_GROUNDED_AI.md  PHASE4_COLLABORATIVE_WORKSPACE.md  PHASE4_COMPLETION.md  RELEASE_CANDIDATE_HARDENING.md  ROADMAP.md  SERVICE_SCOPE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.app.ts  vite.config.ts
frontend-kit/: AutoVerifyButton.tsx  BibliographyPanel.tsx  CitationStylePicker.tsx  EnterprisePanel.tsx  ExportMenu.tsx  IdentityLookup.tsx  ReferencesPanel.tsx  StatusBadge.tsx  useEnterprise.ts
migrations/: env.py
scripts/: check_profile_pinning.py  check_secret_patterns.py  check_staging_secrets.py  compare_profile_rules.py  container_runtime_smoke.py  create_institution.py  deploy_to_oracle.sh  generate_pilot_fixtures.py  generate_profile_golden.py  (+10 more)
(+561 files in other folders)
