[project]
name = "thesis-studio-backend"
version = "0.1.0"
description = "Backend for Robofox Thesis Studio — AI-guided MA thesis writing platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "ASYNC", # async-specific lints
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function call in argument defaults — fastapi Depends() pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]  # tests can use broad except

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["docx.*", "boto3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
